@@ -45,6 +45,7 @@ static char pcm_file[128];
 static long currenttime = 0;
 static int mixer_fd = -1;
 static int pcm_vol = -1;
+static int recording_src;
 
 
 #define RECORD        0
@@ -147,6 +148,12 @@ int get_user_sample_rate()
 	return 41000;
 }
 
+static void set_dsp_fmt(int fd)
+{
+	int fmt = AFMT_S16_LE;
+	ioctl(fd, SNDCTL_DSP_SETFMT, &fmt);
+}
+
 static void set_dsp_rate(int fd, int rate)
 {
 	/* sample rate */
@@ -184,6 +191,9 @@ static void dsp_do_draw(GR_EVENT * event)
 	else {
 		if (mode == RECORD) {
 			GrText(dsp_wid, dsp_gc, 8, 20, "Press action to record", -1, GR_TFASCII);
+		}
+		else {
+			GrText(dsp_wid, dsp_gc, 8, 20, "Press action to playback", -1, GR_TFASCII);
 		}
 	}
 }
@@ -224,8 +234,18 @@ static void * dsp_record(void *filename)
 	}
 
 	samplerate = get_user_sample_rate();
+	if (recording_src == SOUND_MASK_LINE) {
+		channels = 2;
+	}
 	set_dsp_channels(dsp_fd, channels);
 	set_dsp_rate(dsp_fd, samplerate);
+	set_dsp_fmt(dsp_fd);
+
+	mixer_fd = open("/dev/mixer", O_RDWR);
+	if (mixer_fd >= 0) {
+		ioctl(mixer_fd, SOUND_MIXER_WRITE_RECSRC, &recording_src);
+		close(mixer_fd);
+	}
 
 	killed = 0;
 	recording = 1;
@@ -240,7 +260,6 @@ static void * dsp_record(void *filename)
 	write(file_fd, "data", 4);
 	write_32_le(file_fd, 0);	// dummy length value
 
-	currenttime = 0;
 	timer_id = GrCreateTimer(dsp_wid, 1000);
 	draw_time();
 
@@ -260,16 +279,20 @@ static void * dsp_record(void *filename)
 
 		if (!paused) {
 			rem = n = read(dsp_fd, (void *)p, DSP_REC_SIZE);
-		}
-		if (n > 0) {
-			while (rem) {
-				n = write(file_fd, (void *)p, rem);
-				if (n > 0) {
-					rem -= n;
-					p += (n/2);
+			if (n > 0) {
+				while (rem) {
+					n = write(file_fd, (void *)p, rem);
+					if (n > 0) {
+						rem -= n;
+						p += (n/2);
+					}
 				}
 			}
 		}
+	}
+
+	if (!localpaused) {
+		GrDestroyTimer(timer_id);
 	}
 
 	close(dsp_fd);
@@ -330,6 +353,7 @@ static void * dsp_playback(void *filename)
 
 	set_dsp_channels(dsp_fd, channels);
 	set_dsp_rate(dsp_fd, samplerate);
+	set_dsp_fmt(dsp_fd);
 
 	killed = 0;
 	playing = 1;
@@ -338,7 +362,7 @@ static void * dsp_playback(void *filename)
 	dsp_do_draw(0);
 
 	/* assume a basic WAV header, skip to start of PCM data */
-	lseek(file_fd, 22, SEEK_SET);
+	lseek(file_fd, 44, SEEK_SET);
 
 	timer_id = GrCreateTimer(dsp_wid, 1000);
 	draw_time();
@@ -359,13 +383,13 @@ static void * dsp_playback(void *filename)
 
 		if (!paused) {
 			count = rem = n = read(file_fd, (void *)p, DSP_PLAY_SIZE);
-		}
-		if (n > 0) {
-			while (rem) {
-				n = write(dsp_fd, (void *)p, rem);
-				if (n > 0) {
-					rem -= n;
-					p += (n/2);
+			if (n > 0) {
+				while (rem) {
+					n = write(dsp_fd, (void *)p, rem);
+					if (n > 0) {
+						rem -= n;
+						p += (n/2);
+					}
 				}
 			}
 		}
@@ -382,9 +406,11 @@ static void * dsp_playback(void *filename)
 		GrDestroyTimer(timer_id);
 	}
 
+#if 0
 	if (!killed) {
 		pz_close_window(dsp_wid);
 	}
+#endif
 
 no_audio:
 	close(file_fd);
@@ -442,8 +468,14 @@ static int dsp_do_keystroke(GR_EVENT * event)
 			pz_close_window(dsp_wid);
 		}
 		else {
-			start_recording();
+			if (mode == PLAYBACK) {
+				start_playback();
+			}
+			else {
+				start_recording();
+			}
 		}
+		dsp_do_draw(0);
 		break;
 
 	case 'm':
@@ -489,7 +521,7 @@ static int dsp_do_keystroke(GR_EVENT * event)
 }
 
 
-void new_record_window(char *filename)
+void new_record_window()
 {
 	char myfilename[128];
 	time_t now;
@@ -507,6 +539,11 @@ void new_record_window(char *filename)
 	strncpy(pcm_file, myfilename, sizeof(pcm_file) - 1);
 	mode = RECORD;
 
+	playing = 0;
+	recording = 0;
+	paused = 0;
+	currenttime = 0;
+
 	dsp_gc = GrNewGC();
 	GrSetGCUseBackground(dsp_gc, GR_TRUE);
 	GrSetGCForeground(dsp_gc, WHITE);
@@ -519,10 +556,27 @@ void new_record_window(char *filename)
 	GrMapWindow(dsp_wid);
 }
 
+void new_record_mic_window()
+{
+	recording_src = SOUND_MASK_MIC;
+	new_record_window();
+}
+
+void new_record_line_in_window()
+{
+	recording_src = SOUND_MASK_LINE;
+	new_record_window();
+}
+
 void new_playback_window(char *filename)
 {
 	mode = PLAYBACK;
 	strncpy(pcm_file, filename, sizeof(pcm_file) - 1);
+
+	playing = 0;
+	recording = 0;
+	paused = 0;
+	currenttime = 0;
 
 	dsp_gc = GrNewGC();
 	GrSetGCUseBackground(dsp_gc, GR_TRUE);
@@ -535,8 +589,9 @@ void new_playback_window(char *filename)
 
 	GrMapWindow(dsp_wid);
 
-	currenttime = 0;
+#if 0
 	start_playback();
+#endif
 }
 
 void new_playback_browse_window(void)
